# connector-grpc-kw

./: pyproject.toml
src/connector_grpc_kw/commands/: rpc_request.py
src/connector_grpc_kw/proto/: activity_pb2.py  activity_pb2_grpc.py  assessment_pb2.py  assessment_pb2_grpc.py  backoffice_pb2.py  backoffice_pb2_grpc.py  campaigns_pb2.py  campaigns_pb2_grpc.py  common_pb2.py  documentgenerator_pb2.py  documentgenerator_pb2_grpc.py  finance_bo_pb2.py  finance_bo_pb2_grpc.py  finance_pb2.py  finance_pb2_grpc.py  institutional_pb2.py  institutional_pb2_grpc.py  koinbisnis_pb2.py  koinbisnis_pb2_grpc.py  koinbnpl_pb2.py  koinbnpl_pb2_grpc.py  koinemployee_pb2.py  koinemployee_pb2_grpc.py  koingaji_pb2.py  koingaji_pb2_grpc.py  koingold_pb2.py  koingold_pb2_grpc.py  koinneo_pb2.py  koinneo_pb2_grpc.py  koinp2p_pb2.py  koinp2p_pb2_grpc.py  koinpintar_pb2.py  koinpintar_pb2_grpc.py  koinrevolver_pb2.py  koinrevolver_pb2_grpc.py  koinrobo_pb2.py  koinrobo_pb2_grpc.py  lending_pb2.py  lending_pb2_grpc.py  loans_pb2.py  (+25 more)
src/connector_grpc_kw/tests/connector_hasura/unit/: test_get_request.py
